--- a/src/styles/MainStyle.css
+++ b/src/styles/MainStyle.css
@@ -10,8 +10,8 @@ global{
 
 s|ActionBar
 {
-	chromeColor: #8ccbf9;
-	color: #8ccbf9;
+	chromeColor: #3fa9f5;
+	color: #3fa9f5;
 	titleAlign: center;
 	fontSize: 20;
 }
