--- a/src/skins/SetListItemRendererSkin.mxml
+++ b/src/skins/SetListItemRendererSkin.mxml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark" xmlns:styles="styles.*">
+		xmlns:s="library://ns.adobe.com/flex/spark">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("spark.components.SkinnableContainer")]
 	</fx:Metadata>
-	<fx:Script>
-		<![CDATA[
-			public var forCompiler:BlueBox;
-		]]>
-	</fx:Script>
-	
-	<fx:Declarations>
-		<styles:GraphicsLib id="graphicsLib"/>
-	</fx:Declarations>
 	
 	<!-- states -->
 	<s:states>
@@ -21,16 +12,16 @@
 		<s:State name="normal" />
 	</s:states>
 	
-	<s:Rect width="105%" height="100%" filters="{[graphicsLib.getDropShadowFilter()]}">
+	<s:Rect top="0" bottom="0" right="0" left="0">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="#8ccbf9"/>
-				<s:GradientEntry color="#3fa9f5"/>
+				<s:GradientEntry color="0xffffff"/>
+				<s:GradientEntry color="0xeeeeee"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
 	
-	<s:Group id="contentGroup" verticalCenter="0" horizontalCenter="0"/>
+	<s:Group id="contentGroup"/>
 	
 	<!-- SkinParts
 	name=contentGroup, type=spark.components.Group, required=false
