--- a/src/views/MultiplePhotosView.mxml
+++ b/src/views/MultiplePhotosView.mxml
@@ -25,8 +25,6 @@
 			import mx.events.FlexEvent;
 			
 			import queries.PhotoQuery;
-			import queries.SetQuery;
-			import queries.StreamQuery;
 			
 			import statics.ViewTypes;
 			
@@ -92,7 +90,7 @@
 			}
 			
 			private function onListClick(event:Event):void{
-				navigator.pushView(SinglePhotoView, photoList.selectedItem);
+				//navigator.pushView(SinglePhotoView, photoList.selectedItem);
 			}
 			
 			protected function onError(event:Event):void
